--- a/main.html
+++ b/main.html
@@ -21,12 +21,12 @@
 				<td>Gaurav</td>
 			</tr>
 			<tr>
-				<td>1</td>
-				<td>Gaurav</td>
+				<td>2</td>
+				<td>Saurabh</td>
 			</tr>
 			<tr>
-				<td>1</td>
-				<td>Gaurav</td>
+				<td>3</td>
+				<td>Manu</td>
 			</tr>
 		</tbody>
 	</table>
@@ -36,7 +36,9 @@
 			<img src="https://picsum.photos/id/123/200/300" alt="Image">
 		</li>
 		<li>
-			<video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			</video>
 		</li>
 		<li>
 			<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
